[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llmflows"
version = "0.1.2"
authors = [
  { name="Stoyan Stoyanov"},
]
description = "LLMFlows - Simple, Explicit and Transparent LLM Apps"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "anthropic==0.3.11",
    "aiohttp",
    "openai==0.28.1",
    "tiktoken==0.5.1",
    "pinecone-client==2.2.4",
    "urllib3==1.26.17",
    "google-generativeai==0.2.1"
]

[project.urls]
"Homepage" = "https://github.com/stoyan-stoyanov/llmflows"
"github" = "https://github.com/stoyan-stoyanov/llmflows"